--- a/restful-api/gradle/libs.versions.toml
+++ b/restful-api/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-ktor-version = "3.0.0-beta-2"
+ktor-version = "3.0.0-rc-1"
 kotlin-version = "2.0.0"
 logback-version = "1.4.14"
 exposed-version = "0.53.0"
